--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   align-items: center;
   height: 100vh;
   font-family: 'Roboto', sans-serif;
-  background: linear-gradient(135deg, #f80320, #0519f0);
+  background: linear-gradient(135deg, #03aff87a, #0519f0);
   margin: 0;
 }
 
